fix: fix checkbox selected state is not centered

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -61,7 +61,7 @@
 
         position: absolute;
         top: 50%;
-        left: 22%;
+        left: 50%;
         display: table;
         width: @check-width;
         height: @check-height;
@@ -97,6 +97,7 @@
     border-top: 0;
     border-left: 0;
     transform: rotate(45deg) scale(1) translate(-50%, -50%);
+    transform-origin: 20% -5%;
     opacity: 1;
     transition: all 0.2s @ease-out-back 0.1s;
     content: ' ';
